--- a/BugTracker/Web/BugTracker.Web/Views/Bugs/Edit.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Bugs/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit bug";
 }
 
-<h1>Report Bug</h1>
+<h1>@ViewData["Title"]</h1>
 <h4>Project: @Model.ProjectName</h4>
 <hr />
 <div class="container">
