--- a/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center text-dark">
-    <h1 class="display-4">Welcome to my Bug Tracker</h1>
+    <h1 class="display-4">Welcome back</h1>
     <hr />
     @if (Model.News.Count() > 0)
     {
