Added pagination to Companies made news available to everyone in the company that contains the project.

--- a/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Home/IndexLogged.cshtml
@@ -7,6 +7,11 @@
 <div class="text-center text-dark">
     <h1 class="display-4">Welcome back</h1>
     <hr />
+    @if(Model.News.Count() <= 0 && Model.Assignments.Count() <= 0)
+    {
+        <p class="display-4">There are no news or assignments for you yet.</p>
+    }
+
     @if (Model.News.Count() > 0)
     {
         <h4>News</h4>
