--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
@@ -65,7 +65,7 @@
         </tbody>
     </table>
 }
-@if (!this.User.IsInRole("CompanyAdministrator") && !this.User.IsInRole("ProjectAdministrator"))
+else
 {
     <p>The companies you have joined currently don't have any projects. Contact the companies administrators for more information or <a asp-controller="Companies" asp-action="Create">create</a> a new company for yourself and create projects for it.</p>
 }
