--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Your Companies";
 }
 
-    <h1>@ViewData["Title"]</h1>
+<h1>@ViewData["Title"]</h1>
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
@@ -24,3 +24,49 @@
         </div>
     }
 </div>
+<hr />
+
+<nav>
+    <ul class="pagination justify-content-center">
+        @if (Model.CurrentPage == 1)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Previous</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-area="Administration"
+                   asp-route-name="Companies"
+                   asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
+            </li>
+        }
+        @for (int i = 1; i <= this.Model.PagesCount; i++)
+        {
+            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+            <li class="page-item @active">
+                <a class="page-link"
+                   asp-area="Administration"
+                   asp-route-name="Companies"
+                   asp-route-page="@i">@i</a>
+            </li>
+        }
+        @if (Model.CurrentPage == Model.PagesCount)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-area="Administration"
+                   asp-route-name="Companies"
+                   asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
