--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
@@ -21,10 +21,53 @@
             <div class="card-body">
                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
                 <p class="card-text">@Html.DisplayFor(modelitem => item.Description)</p>
-                <a class="btn btn-primary" asp-action="Join" asp-route-id="@item.Id">Join</a> 
+                <a class="btn btn-primary" asp-action="Join" asp-route-id="@item.Id">Join</a>
                 <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
             </div>
         </div>
         <br />
     }
 </div>
+<hr />
+
+<nav>
+    <ul class="pagination justify-content-center">
+        @if (Model.CurrentPage == 1)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Previous</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-route-name="Companies"
+                   asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
+            </li>
+        }
+        @for (int i = 1; i <= this.Model.PagesCount; i++)
+        {
+            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+            <li class="page-item @active">
+                <a class="page-link"
+                   asp-route-name="Companies"
+                   asp-route-page="@i">@i</a>
+            </li>
+        }
+        @if (Model.CurrentPage == Model.PagesCount)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-route-name="Companies"
+                   asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
