--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
@@ -21,22 +21,19 @@
 @if (Model.Projects.Count() > 0)
 {
     var projectData = Model.Projects.FirstOrDefault();
-    <table class="table w-100">
+    <table class="table table-striped w-100" cellspacing="0">
         <thead>
             <tr>
-                <th>
+                <th style="width: 15%">
                     @Html.DisplayNameFor(model => projectData.Name)
                 </th>
-                <th>
+                <th style="width: 65%">
                     @Html.DisplayNameFor(model => projectData.Description)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => projectData.Status)
-                </th>
-                <th>
+                <th style="width: 10%">
                     @Html.DisplayNameFor(model => projectData.Bugs)
                 </th>
-                <th class="text-hide">
+                <th style="width: 10%" class="text-hide">
 
                 </th>
             </tr>
@@ -44,26 +41,66 @@
         <tbody>
             @foreach (var item in Model.Projects)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Status)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Bugs.Count)
-                    </td>
-                    <td>
-                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    </td>
-                </tr>
+            <tr>
+                <td style="width: 15%">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td style="width: 65%">
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td style="width: 10%">
+                    @Html.DisplayFor(modelItem => item.Bugs.Count)
+                </td>
+                <td style="width: 10%">
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
+
+
+    <nav>
+        <ul class="pagination justify-content-center">
+            @if (Model.CurrentPage == 1)
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Previous</a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       asp-route-name="Companies"
+                       asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+            @for (int i = 1; i <= this.Model.PagesCount; i++)
+            {
+                var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+                <li class="page-item @active">
+                    <a class="page-link"
+                       asp-route-name="Companies"
+                       asp-route-page="@i">@i</a>
+                </li>
+            }
+            @if (Model.CurrentPage == Model.PagesCount)
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       asp-route-name="Companies"
+                       asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
+                </li>
+            }
+        </ul>
+    </nav>
 }
 else
 {
